fix: create dto catalog; create services/taskManager catalog; create apperror catalog; fix swagger; fix naming
