# internal/controller/rest/rest.go
@@ -2,40 +2,30 @@ package rest
 
 import (
 	"encoding/json"
-	"errors"
 	"net/http"
 
+	"github.com/sater-151/tt-workmate/internal/apperror"
+	"github.com/sater-151/tt-workmate/internal/controller/rest/dto"
 	"github.com/sater-151/tt-workmate/internal/controller/rest/restutils"
 	"github.com/sater-151/tt-workmate/internal/services/taskManager"
 	logger "github.com/sirupsen/logrus"
 )
-
-var ErrorIDRequired = errors.New("id required")
-
-type HTTPError struct {
-	Code  int    `json:"code"`
-	Error string `json:"error"`
-}
-
-type ResponceId struct {
-	Id string `json:"id"`
-}
 
 // CreateTask godoc
 //
 //	@Summary		Create a new task
 //	@Tags			Task
 //	@Produce		json
-//	@Success		201	{object}	rest.ResponceId
+//	@Success		201	{object}	dto.ResponceId
 //	@Router			/api/task/new [post]
-func CreateTask(s taskManager.ServiceInterface) http.HandlerFunc {
+func CreateTask(s taskManager.Service) http.HandlerFunc {
 	return func(res http.ResponseWriter, req *http.Request) {
 		logger.Info("creating task")
 		id := s.CreateTask()
 		logger.Info("task created")
-		go s.Processing(id)
+		go s.StartTask(id)
 		res.WriteHeader(http.StatusCreated)
-		json.NewEncoder(res).Encode(ResponceId{Id: id})
+		json.NewEncoder(res).Encode(dto.ResponceId{Id: id})
 		logger.Info("id sended")
 	}
 }
@@ -47,22 +37,22 @@ func CreateTask(s taskManager.ServiceInterface) http.HandlerFunc {
 //	@Tags			Task
 //	@Produce		json
 //	@Param			id	query		string	true	"task id"
-//	@Success		204	{object}	rest.ResponceId
+//	@Success		204	{object}	dto.ResponceId
 //	@Failure		400	{object}	restutils.HTTPError
 //	@Failure		403	{object}	restutils.HTTPError
 //	@Router			/api/task/delete [delete]
-func DeleteTask(s taskManager.ServiceInterface) http.HandlerFunc {
+func DeleteTask(s taskManager.Service) http.HandlerFunc {
 	return func(res http.ResponseWriter, req *http.Request) {
 		logger.Info("deleting task")
 		id := req.FormValue("id")
 		if id == "" {
-			logger.Error(ErrorIDRequired)
-			restutils.Error(res, ErrorIDRequired.Error(), http.StatusBadRequest)
+			logger.Error(apperror.ErrorIDRequired)
+			restutils.Error(res, apperror.ErrorIDRequired.Error(), http.StatusBadRequest)
 			return
 		}
 		if err := s.DeleteTask(id); err != nil {
 			logger.Warn(err.Error())
-			if err == taskManager.ErrorTaskNotFound {
+			if err == apperror.ErrorTaskNotFound {
 				restutils.Error(res, err.Error(), http.StatusBadRequest)
 			} else {
 				restutils.Error(res, err.Error(), http.StatusForbidden)
@@ -81,16 +71,16 @@ func DeleteTask(s taskManager.ServiceInterface) http.HandlerFunc {
 //	@Tags			Task
 //	@Produce		json
 //	@Param			id	query		string	true	"task id"
-//	@Success		200	{object}	service.TaskInfo
+//	@Success		200	{object}	taskManager.TaskInfo
 //	@Failure		400	{object}	restutils.HTTPError
 //	@Router			/api/task/info [get]
-func GetTaskInfo(s taskManager.ServiceInterface) http.HandlerFunc {
+func GetTaskInfo(s taskManager.Service) http.HandlerFunc {
 	return func(res http.ResponseWriter, req *http.Request) {
 		logger.Info("getting task info")
 		id := req.FormValue("id")
 		if id == "" {
-			logger.Error(ErrorIDRequired)
-			restutils.Error(res, ErrorIDRequired.Error(), http.StatusBadRequest)
+			logger.Error(apperror.ErrorIDRequired)
+			restutils.Error(res, apperror.ErrorIDRequired.Error(), http.StatusBadRequest)
 			return
 		}
 		taskInfo, err := s.GetTaskInfo(id)
